--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="local_service_connected">服务已连接</string>
     <string name="local_service_started">定时服务已启动</string>
     <string name="local_service_label">服务正在重新启动</string>
+    <string name="chooser_title">拭心让你选一个</string>
 </resources>
