--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="local_service_label">服务正在重新启动</string>
     <string name="chooser_title">拭心让你选一个</string>
     <string name="float_tracker">悬浮Activity信息</string>
+    <string name="aidl_test">AIDL test</string>
 </resources>
