--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="chooser_title">拭心让你选一个</string>
     <string name="float_tracker">悬浮Activity信息</string>
     <string name="aidl_test">AIDL test</string>
+    <string name="okhttp_test">OkHttp3 test</string>
 </resources>
