--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="ipc_test">IPC test</string>
     <string name="okhttp_test">OkHttp3 test</string>
     <string name="socket_test">socket test</string>
+    <string name="android_evolution">安卓进阶</string>
 </resources>
