--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="android_evolution">安卓进阶</string>
     <string name="handler_test">HandlerThread 示例</string>
     <string name="intent_service_test">IntentService 示例</string>
+    <string name="eventbus_sample">EventBus 3.0 示例</string>
 </resources>
