--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="handler_test">HandlerThread 示例</string>
     <string name="intent_service_test">IntentService 示例</string>
     <string name="eventbus_sample">EventBus 3.0 示例</string>
+    <string name="eventbus_sticky">EventBus 粘性事件</string>
+    <string name="eventbus_post">EventBus 消息发送页面</string>
 </resources>
