add nlog, not finish yet

--- a/sxdebugkit/src/main/res/values/strings.xml
+++ b/sxdebugkit/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">sxdebugkit</string>
     <string name="accessibility_service_description">开启后显示前台Activity信息</string>
+    <string name="log_detail">日志详情</string>
 </resources>
