almost finish tbw crawler

--- a/hotfix-sample/src/main/res/values/strings.xml
+++ b/hotfix-sample/src/main/res/values/strings.xml
@@ -15,11 +15,5 @@
   -->
 
 <resources>
-    <string name="app_name">mvpcrawler</string>
-    <string name="sell_nice_car">卖好车</string>
-    <string name="yi_jie_hao_che">易捷好车</string>
-    <string name="title">mvpcrawler-数据爬取</string>
-    <string name="description">开启辅助服务后即可模拟点击</string>
-    <string name="app_name_maihaoche">com.maihaoche.bentley</string>
-    <string name="tiao_ban_wang">跳板网</string>
+    <string name="app_name">hotfix</string>
 </resources>
